html test basico

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<html>
+    <head>
+        <meta name="viewport" content="initial-scale=1">
+    </head>
+    <body>
+        <h1>Perfil de Selmar</h1>
+        <div>Perfil personal para mostrar mis proyectos y actividades</div>
+    </body>
+</html>
