--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta name="viewport" content="initial-scale=1">
     </head>
     <body>
-        <h1>Perfil de Selmar</h1>
+        <h1>Perfil</h1>
         <div>Perfil personal para mostrar mis proyectos y actividades</div>
     </body>
 </html>
