--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <meta name="viewport" content="initial-scale=1">
+        <link rel="stylesheet" type="text/css" href="styles/style.css">
     </head>
     <body>
         <h1>Perfil</h1>
