Header basico con foto de perfil

--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@
         <link rel="stylesheet" type="text/css" href="styles/style.css">
     </head>
     <body>
-        <h1>Perfil</h1>
-        <div>Perfil personal para mostrar mis proyectos y actividades</div>
+        <script type="text/javascript" src="scripts/script.js"></script>
+        <div class="main">
+            <div class="header">
+                <div class="perfil"><img id="header_imagen" src="images/perfil.png"></div>
+                <div class="datos">
+                    <h1>Selmar Álvarez</h1>
+                    <h3>Trabajo con datos y me encanta.</h3>
+                </div>
+            </div>
+            <div class="content">
+
+            </div>
+            <div class="footer">
+
+            </div>
+        </div>
+
     </body>
 </html>
