--- a/index.html
+++ b/index.html
@@ -2,24 +2,60 @@
     <head>
         <meta name="viewport" content="initial-scale=1">
         <link rel="stylesheet" type="text/css" href="styles/style.css">
+        <link rek="json" type="json" href="data/data.json">
     </head>
     <body>
         <script type="text/javascript" src="scripts/script.js"></script>
-        <div class="main">
+        <div class="contenedor">
             <div class="header">
-                <div class="perfil"><img id="header_imagen" src="images/perfil.png"></div>
+                <div class="perfil">
+                    <img class="perfil_image" src="images/perfil.png">
+                </div>
                 <div class="datos">
-                    <h1>Selmar Álvarez</h1>
-                    <h3>Trabajo con datos y me encanta.</h3>
+                    <h1>Selmar Alvarez</h1>
+                    <h3>Analisis y visualizacion de datos</h3>
+                    <p><span>Instagram</span> <span>Mail</span></p>
                 </div>
             </div>
-            <div class="content">
-
+            <div class="contenido">
+                <div class="articulo">
+                    <img class="articulo_image" src="images/articulo_001.jpg">
+                    <div class="articulo_titulo">Articulo A</div>
+                </div>
+                <div class="articulo">
+                    <img class="articulo_image" src="images/articulo_002.jpg">
+                    <div class="articulo_titulo">Articulo B</div>
+                </div>
+                <div class="articulo">
+                    <img class="articulo_image" src="images/articulo_003.jpg">
+                    <div class="articulo_titulo">Articulo C</div>
+                </div>
+                <div class="articulo">
+                    <img class="articulo_image" src="images/articulo_004.jpg">
+                    <div class="articulo_titulo">Articulo D</div>
+                </div>
+                <div class="articulo">
+                    <img class="articulo_image" src="images/articulo_005.jpg">
+                    <div class="articulo_titulo">Articulo E</div>
+                </div>
+                <div class="articulo">
+                    <img class="articulo_image" src="images/articulo_006.jpg">
+                    <div class="articulo_titulo">Articulo F</div>
+                </div>
+                <div class="articulo">
+                    <img class="articulo_image" src="images/articulo_007.jpg">
+                    <div class="articulo_titulo">Articulo G</div>
+                </div>
+                <div class="articulo">
+                    <img class="articulo_image" src="images/articulo_008.jpg">
+                    <div class="articulo_titulo">Articulo H</div>
+                </div>
+                <div class="articulo">
+                    <img class="articulo_image" src="images/articulo_009.jpg">
+                    <div class="articulo_titulo">Articulo I</div>
+                </div>
             </div>
-            <div class="footer">
-
-            </div>
+            <div class="footer"></div>
         </div>
-
     </body>
 </html>
