--- a/index.html
+++ b/index.html
@@ -17,43 +17,8 @@
                     <p><span>Instagram</span> <span>Mail</span></p>
                 </div>
             </div>
-            <div class="contenido">
-                <div class="articulo">
-                    <img class="articulo_image" src="images/articulo_001.jpg">
-                    <div class="articulo_titulo">Articulo A</div>
-                </div>
-                <div class="articulo">
-                    <img class="articulo_image" src="images/articulo_002.jpg">
-                    <div class="articulo_titulo">Articulo B</div>
-                </div>
-                <div class="articulo">
-                    <img class="articulo_image" src="images/articulo_003.jpg">
-                    <div class="articulo_titulo">Articulo C</div>
-                </div>
-                <div class="articulo">
-                    <img class="articulo_image" src="images/articulo_004.jpg">
-                    <div class="articulo_titulo">Articulo D</div>
-                </div>
-                <div class="articulo">
-                    <img class="articulo_image" src="images/articulo_005.jpg">
-                    <div class="articulo_titulo">Articulo E</div>
-                </div>
-                <div class="articulo">
-                    <img class="articulo_image" src="images/articulo_006.jpg">
-                    <div class="articulo_titulo">Articulo F</div>
-                </div>
-                <div class="articulo">
-                    <img class="articulo_image" src="images/articulo_007.jpg">
-                    <div class="articulo_titulo">Articulo G</div>
-                </div>
-                <div class="articulo">
-                    <img class="articulo_image" src="images/articulo_008.jpg">
-                    <div class="articulo_titulo">Articulo H</div>
-                </div>
-                <div class="articulo">
-                    <img class="articulo_image" src="images/articulo_009.jpg">
-                    <div class="articulo_titulo">Articulo I</div>
-                </div>
+            <div class="contenido" id="contenido_box">
+                <!-- Generación dinámica del contenido con base en el archivo Data.json -->
             </div>
             <div class="footer"></div>
         </div>
