prueba de plantillas html

--- a/articulo001.html
+++ b/articulo001.html
@@ -1,1 +1,7 @@
-Articulo001
+{% extends "_layouts/layout.html" %}
+
+{% block content %}
+<div class="contenido">
+    <h1>Articulo 001</h1>
+</div>
+{% endblock%}
